@@ -1,15 +1,12 @@
 package com.example.moneyway.common.config;
 
 import com.example.moneyway.auth.jwt.JwtAuthenticationFilter;
-import com.example.moneyway.auth.jwt.JwtTokenProvider;
-import com.example.moneyway.auth.oauth.OAuth2SuccessHandler;
 import com.example.moneyway.auth.oauth.KakaoOAuth2Service;
+import com.example.moneyway.auth.oauth.OAuth2LoginFailureHandler;
+import com.example.moneyway.auth.oauth.OAuth2SuccessHandler;
 import com.example.moneyway.auth.oauth.repository.OAuth2AuthorizationCookieRepository;
-import com.example.moneyway.auth.token.repository.RefreshTokenRepository;
-import com.example.moneyway.common.exception.CustomAuthenticationEntryPoint; // [신규]
-import com.example.moneyway.user.service.UserService;
+import com.example.moneyway.common.exception.CustomAuthenticationEntryPoint;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Value; // [신규]
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -18,11 +15,10 @@ import org.springframework.security.config.annotation.web.configurers.AbstractHt
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.web.cors.CorsConfiguration; // [신규]
-import org.springframework.web.cors.CorsConfigurationSource; // [신규]
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource; // [신규]
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @RequiredArgsConstructor
@@ -30,19 +26,17 @@ import java.util.List;
 @EnableWebSecurity
 public class WebSecurityConfig {
 
-    private final JwtTokenProvider jwtTokenProvider;
+    // 현재 가지고 계신 모든 필수 컴포넌트를 생성자 주입으로 받습니다.
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
     private final KakaoOAuth2Service kakaoOAuth2Service;
-    private final RefreshTokenRepository refreshTokenRepository;
-    private final UserService userService;
-
-    // [신규] OAuth2 로그인 실패 시 리다이렉트 될 URL을 application.yml에서 주입
-    @Value("${oauth.login-failure-redirect-uri:http://localhost:3000/login?error}")
-    private String loginFailureRedirectUri;
+    private final OAuth2SuccessHandler oAuth2SuccessHandler;
+    private final OAuth2LoginFailureHandler oAuth2LoginFailureHandler;
+    private final OAuth2AuthorizationCookieRepository oAuth2AuthorizationCookieRepository;
+    private final CustomAuthenticationEntryPoint customAuthenticationEntryPoint;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         return http
-                // [개선] CORS 설정 추가
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
                 .httpBasic(AbstractHttpConfigurer::disable)
@@ -50,82 +44,55 @@ public class WebSecurityConfig {
                 .logout(AbstractHttpConfigurer::disable)
                 .sessionManagement(session -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                // API 경로별 접근 권한 설정
                 .authorizeHttpRequests(auth -> auth
-                        // 아래 경로들은 인증 없이 접근 허용
+                        // 인증 없이 접근을 허용할 경로들
                         .requestMatchers(
-                                "/api/auth/**", "/login/**", "/oauth2/**", "/api/**",
-                                "/swagger-ui/**", "/v3/api-docs/**", "/swagger-resources/**",
-                                "/error" // Spring Boot 기본 에러 페이지
+                                "/api/auth/**",       // 인증(로그인, 회원가입) 관련 API
+                                "/login/**",          // 소셜 로그인 리다이렉션 경로
+                                "/oauth2/**",         // OAuth2 처리 경로
+                                "/error",             // Spring Boot 기본 에러 페이지
+                                // Swagger UI 접근 허용
+                                "/swagger-ui/**",
+                                "/v3/api-docs/**",
+                                "/swagger-resources/**"
                         ).permitAll()
-                        // 그 외 모든 요청은 인증 필요
+                        // 위 경로를 제외한 모든 요청은 반드시 인증을 거쳐야 합니다.
                         .anyRequest().authenticated()
                 )
+                // OAuth2 로그인 설정
                 .oauth2Login(oauth2 -> oauth2
                         .authorizationEndpoint(endpoint -> endpoint
-                                .authorizationRequestRepository(oAuth2AuthorizationRequestBasedOnCookieRepository()))
+                                .authorizationRequestRepository(oAuth2AuthorizationCookieRepository))
                         .userInfoEndpoint(info -> info
                                 .userService(kakaoOAuth2Service))
-                        .successHandler(oAuth2SuccessHandler())
-                        // 하드코딩된 URL 대신 주입받은 값 사용
-                        .failureHandler((request, response, exception) -> {
-                            response.sendRedirect(loginFailureRedirectUri);
-                        })
+                        // 직접 만든 성공 및 실패 핸들러를 등록합니다.
+                        .successHandler(oAuth2SuccessHandler)
+                        .failureHandler(oAuth2LoginFailureHandler)
                 )
-                .addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class)
-                // 일관된 예외 응답을 위해 커스텀 EntryPoint 사용
+                // JWT 필터를 UsernamePasswordAuthenticationFilter 앞에 추가합니다.
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                // 인증 예외 발생 시, 커스텀 EntryPoint가 일관된 에러 응답을 처리합니다.
                 .exceptionHandling(exception -> exception
-                        .authenticationEntryPoint(customAuthenticationEntryPoint())
+                        .authenticationEntryPoint(customAuthenticationEntryPoint)
                 )
                 .build();
     }
 
-    /**
-     * CORS(Cross-Origin Resource Sharing) 설정
-     * 다른 도메인의 프론트엔드에서 API를 호출할 수 있도록 허용
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // 허용할 출처(프론트엔드 주소) 설정
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://192.168.100.37:3000","https://moneyway-572cf.web.app"));
-        // 허용할 HTTP 메서드 설정
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        // 허용할 HTTP 헤더 설정
+        // 허용할 프론트엔드 출처(Origin) 목록
+        configuration.setAllowedOrigins(List.of("http://localhost:3000", "https://moneyway-572cf.web.app"));
+        // 허용할 HTTP 메서드
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        // 허용할 HTTP 헤더
         configuration.setAllowedHeaders(List.of("*"));
-        // 자격 증명(쿠키 등) 허용 여부
+        // 쿠키 등 자격 증명을 포함한 요청 허용
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        // 모든 경로에 대해 위 설정 적용
+        // 모든 경로("/**")에 대해 위 CORS 설정을 적용합니다.
         source.registerCorsConfiguration("/**", configuration);
         return source;
-    }
-
-    @Bean
-    public JwtAuthenticationFilter jwtAuthenticationFilter() {
-        return new JwtAuthenticationFilter(jwtTokenProvider);
-    }
-
-    @Bean
-    public OAuth2SuccessHandler oAuth2SuccessHandler() {
-        return new OAuth2SuccessHandler(
-                jwtTokenProvider,
-                refreshTokenRepository,
-                oAuth2AuthorizationRequestBasedOnCookieRepository()
-        );
-    }
-
-    @Bean
-    public OAuth2AuthorizationCookieRepository oAuth2AuthorizationRequestBasedOnCookieRepository() {
-        return new OAuth2AuthorizationCookieRepository();
-    }
-
-    /**
-     * [신규] 인증 실패 시 일관된 ErrorResponse를 반환하기 위한 커스텀 EntryPoint
-     */
-    @Bean
-    public CustomAuthenticationEntryPoint customAuthenticationEntryPoint() {
-        return new CustomAuthenticationEntryPoint();
     }
 }
